--- a/_posts/2014-07-18-project-2.md
+++ b/_posts/2014-07-18-project-2.md
@@ -1,7 +1,7 @@
 ---
 layout: default
 modal-id: rock-climbing-robot-racers
-title: Rock-climbing Robot Racers
+title: 4
 link: https://rockclimbing-robot-racers.herokuapp.com
 featured: splash.png
 screenshots:
